@@ -104,7 +104,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <argLine>--add-opens wtf.metio.reguloj/wtf.metio.reguloj=ALL-UNNAMED</argLine>
+          <argLine>
+            --enable-preview
+            --add-opens wtf.metio.reguloj/wtf.metio.reguloj=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
